Fix Font Awesome icon layout shift on page load
Set explicit dimensions on .svg-inline--fa icons in custom.css to prevent
them from flashing large before Font Awesome's CSS loads.

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -149,6 +149,15 @@ code, pre, .mono {
   display: none;
 }
 
+/* Prevent Font Awesome SVG icons from flashing large before FA CSS loads */
+.svg-inline--fa {
+  height: 1em;
+  width: 1em;
+  vertical-align: -0.125em;
+  overflow: visible;
+  display: inline-block;
+}
+
 img.icon {
   height: 1.5em;
   vertical-align: middle;
